selfhost/test/parser/functiondecl_error_self_default_value.out
Error at %FILE_NAME%:1:15
Unexpected token '=', expected one of ',', ')':
  |  func foo(self = 123) {}
                   ^